tests/ui/rfc-2005-default-binding-mode/slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice.rs:4:11
   |
LL |     match sl {
   |           ^^ pattern `&[]` not covered
   |
   = note: the matched value is of type `&[u8]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         [first, remainder @ ..] => {},
LL ~         &[] => todo!(),
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
